Chapter07.01/manual_model_deployment/http-echo-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logger
spec:
  selector:
    matchLabels:
      run: logger
  replicas: 1
  template:
    metadata:
      labels:
        run: logger
    spec:
      containers:
        - name: logger
          image: mendhak/http-https-echo
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: logger
  labels:
    run: logger
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    run: logger
