Chapter07.01/manual_model_deployment/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    project_name: model-test
    deployment_version: v1
  labels:
    app: seldon
  name: model-test

spec:
  ingressClassName: nginx
  rules:
    - host: model-test.${MINIKUBE_IP_ADDR}.nip.io
      http:
        paths:
          - backend:
              service:
                name: model-test
                port:
                  number: 8000
            path: /
            pathType: ImplementationSpecific
